fixed gtk3 css hack to make invisible title/subtitle of headerbars

--- a/felix-debian11/user-dotfiles/.config/gtk-3.0/gtk.css
+++ b/felix-debian11/user-dotfiles/.config/gtk-3.0/gtk.css
@@ -21,15 +21,6 @@ scrolledwindow undershoot {
 }
 
 /* CSD: collapse leftover when using gtk3-nocsd */
-headerbar {
-	margin-top: -100px;
-	border-bottom-width: 0;
-}
-/* but not when functional elements are in it */
-headerbar button,
-headerbar spinbutton,
-headerbar entry,
-headerbar separator {
-	margin-top: 103px;
-	margin-bottom: 3px;
+headerbar.titlebar {
+	color: transparent;
 }
